--- a/2_Dom/index.html
+++ b/2_Dom/index.html
@@ -9,32 +9,57 @@
     <script src="./main.js" defer></script>
   </head>
   <body>
-    <dir id="num3">
+    <!-- <div id="num3">
       <h3>Задание 3</h3>
       <input type="text" id="inp3" />
       <button id="buttonChecker">Проверить ввод</button>
-    </dir>
-    <dir id="num4">
+    </div>
+    <div id="num4">
       <h3>Задание 4</h3>
       <input type="text" id="inp4x1" />
       <input type="text" id="inp4x2" />
       <button id="buttonChange">Поменять местами ввод</button>
-    </dir>
-    <dir id="num5">
+    </div>
+    <div id="num5">
       <h3>Задание 5</h3>
       <input type="text" id="inp5" />
       <button id="buttonToggle">Выключить/включить ввод</button>
       <button id="inpOff">Выключить ввод</button>
       <button id="inpOn">Включить ввод</button>
-    </dir>
-    <dir id="num6">
+    </div>
+    <div id="num6">
       <button id="disableBack">Сделать квадрат белым</button>
-    </dir>
-    <!-- <dir id="num8">
-      <dir id="square1"></dir>
-      <dir id="square2"></dir>
-      <dir id="square3"></dir>
-      <dir id="square4"></dir> -->
-    </dir>
+    </div> -->
+    <div id="num8">
+      <div id="firstBlocks">
+        <div class="square"></div>
+        <div class="square"></div>
+      </div>
+      <div id="secondBlocks">
+        <div class="square"></div>
+        <div class="square"></div>
+      </div>
+    </div>
+    <!-- <div id="num9">
+      <input type="text" id="output" disabled />
+      <div id="buttons">
+        <button class="inputer">1</button>
+        <button class="inputer">2</button>
+        <button class="inputer">3</button>
+        <button class="inputer">4</button>
+        <button class="inputer">5</button>
+        <button class="inputer">6</button>
+        <button class="inputer">7</button>
+        <button class="inputer">8</button>
+        <button class="inputer">9</button>
+        <button class="inputer">0</button>
+        <button class="inputer">+</button>
+        <button class="inputer">-</button>
+        <button class="inputer">*</button>
+        <button class="inputer">/</button>
+        <button id="result">=</button>
+        <button id="clear">Clear</button>
+      </div>
+    </div> -->
   </body>
 </html>
