--- a/2_Dom/index.html
+++ b/2_Dom/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="./main.css" />
     <script src="./main.js" defer></script>
+    <!-- Материалайз -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+
+    <!-- Материалайз -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
     <!-- <div id="num3">
@@ -40,26 +48,38 @@
         <div class="square"></div>
       </div>
     </div>
-    <!-- <div id="num9">
+    <center id="num9">
       <input type="text" id="output" disabled />
       <div id="buttons">
-        <button class="inputer">1</button>
-        <button class="inputer">2</button>
-        <button class="inputer">3</button>
-        <button class="inputer">4</button>
-        <button class="inputer">5</button>
-        <button class="inputer">6</button>
-        <button class="inputer">7</button>
-        <button class="inputer">8</button>
-        <button class="inputer">9</button>
-        <button class="inputer">0</button>
-        <button class="inputer">+</button>
-        <button class="inputer">-</button>
-        <button class="inputer">*</button>
-        <button class="inputer">/</button>
-        <button id="result">=</button>
-        <button id="clear">Clear</button>
+        <button class="inputer waves-effect waves-light btn-small">1</button>
+        <button class="inputer waves-effect waves-light btn-small">2</button>
+        <button class="inputer waves-effect waves-light btn-small">3</button>
+        <button class="inputer waves-effect waves-light btn-small">4</button>
+        <button class="inputer waves-effect waves-light btn-small">5</button>
+        <button class="inputer waves-effect waves-light btn-small">6</button>
+        <button class="inputer waves-effect waves-light btn-small">7</button>
+        <button class="inputer waves-effect waves-light btn-small">8</button>
+        <button class="inputer waves-effect waves-light btn-small">9</button>
+        <button class="inputer waves-effect waves-light btn-small">0</button>
+        <button class="inputerMath waves-effect waves-light btn-small">
+          +
+        </button>
+        <button class="inputerMath waves-effect waves-light btn-small">
+          -
+        </button>
+        <button class="inputerMath waves-effect waves-light btn-small">
+          *
+        </button>
+        <button class="inputerMath waves-effect waves-light btn-small">
+          /
+        </button>
+        <button id="result" class="waves-effect waves-light btn-small">
+          =
+        </button>
+        <button id="clear" class="waves-effect waves-light btn-small">
+          Clear
+        </button>
       </div>
-    </div> -->
+    </center>
   </body>
 </html>
