--- a/3_Dom/index.html
+++ b/3_Dom/index.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div class="container">
-      <input type="text" class="input" />
+      <input type="text" class="inputMinutes" placeholder="Minutes" />
+      <input type="text" class="inputSeconds" placeholder="Seconds" />
       <button class="button waves-effect waves-light btn-small">SEND</button>
       <button class="buttonStop waves-effect waves-light btn-small">
         STOP
