--- a/3_Dom/index.html
+++ b/3_Dom/index.html
@@ -14,13 +14,18 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    <div class="container">
+    <!-- <div class="container">
       <input type="text" class="inputMinutes" placeholder="Minutes" />
       <input type="text" class="inputSeconds" placeholder="Seconds" />
       <button class="button waves-effect waves-light btn-small">SEND</button>
       <button class="buttonStop waves-effect waves-light btn-small">
         STOP
       </button>
+    </div> -->
+
+    <div>
+      <h2 class="h"></h2>
+      <input type="text" class="inputer" />
     </div>
   </body>
 </html>
