--- a/todo/forMom.html
+++ b/todo/forMom.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title class="name">for son</title>
+    <title class="name">for mom</title>
     <link rel="stylesheet" href="main.css" />
     <script type="module" src="main_script.js" defer></script>
 
@@ -18,7 +18,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="/forMom.html">For mom</a></li>
+          <li><a href="/index.html">for son</a></li>
           <li><a href="/forDad.html">For dad</a></li>
         </ul>
       </nav>
